Adds Kubernetes support #2